// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - Heroku microservice application with JAR deployment should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "microservice",
    "authenticationType": "jwt",
    "baseName": "sampleMicroservice",
    "buildTool": "maven",
    "cacheProvider": "hazelcast",
    "clientPackageManager": "npm",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableHibernateCache": false,
    "enableSwaggerCodegen": false,
    "enableTranslation": false,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "17",
    "jhiPrefix": "jhi",
    "jhipsterVersion": "4.14.0",
    "jwtSecretKey": "SECRET--50",
    "messageBroker": "no",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "promptValues": {
      "packageName": "com.mycompany.myapp"
    },
    "searchEngine": "no",
    "serverPort": "8081",
    "serviceDiscoveryType": "eureka",
    "skipClient": true,
    "skipUserManagement": true,
    "testFrameworks": [],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false
  client:
    service-url:
      defaultZone: \${JHIPSTER_REGISTRY_URL}/eureka/

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

spring:
  cloud:
    config:
      fail-fast: true
      uri: \${JHIPSTER_REGISTRY_URL}/config
",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=17 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application in the EU should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application in the US should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application with Git deployment should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "git",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application with PostgreSQL should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "postgresql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application with an unavailable app name should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-new-name",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-new-name.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application with elasticsearch should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "samplePsql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-test",
    "herokuDeployType": "jar",
    "herokuJavaVersion": "11",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "postgresql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "elasticsearch",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-test.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
  elasticsearch:
    uris: \${BONSAI_URL}
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=11 ",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - Heroku monolith application with existing app should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "contents": "{
  "generator-jhipster": {
    "applicationType": "monolith",
    "authenticationType": "session",
    "baseName": "sampleMysql",
    "buildTool": "maven",
    "cacheProvider": "ehcache",
    "databaseType": "sql",
    "devDatabaseType": "h2Disk",
    "enableTranslation": true,
    "herokuAppName": "jhipster-existing",
    "herokuDeployType": "git",
    "herokuJavaVersion": "17",
    "languages": ["en", "fr"],
    "nativeLanguage": "en",
    "packageFolder": "com/mycompany/myapp",
    "packageName": "com.mycompany.myapp",
    "prodDatabaseType": "mysql",
    "rememberMeKey": "2bb60a80889aa6e6767e9ccd8714982681152aa5",
    "searchEngine": "no",
    "testFrameworks": ["gatling"],
    "websocket": "no"
  }
}
",
    "stateCleared": "modified",
  },
  "Procfile": {
    "contents": "web: java $JAVA_OPTS -Xmx256m -jar target/*.jar --spring.profiles.active=prod,heroku
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-heroku.yml": {
    "contents": "# ===================================================================
# Spring Boot configuration for the "heroku" profile.
#
# This configuration overrides the application.yml file.
# ===================================================================

# ===================================================================
# Standard Spring Boot properties.
# Full reference is available at:
# http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
# ===================================================================

eureka:
  instance:
    hostname: jhipster-existing.herokuapp.com
    non-secure-port: 80
    prefer-ip-address: false

spring:
  datasource:
    type: com.zaxxer.hikari.HikariDataSource
    url: \${JDBC_DATABASE_URL}
    username: \${JDBC_DATABASE_USERNAME}
    password: \${JDBC_DATABASE_PASSWORD}
    hikari:
      maximumPoolSize: 8
server:
  port: \${PORT:8080}
",
    "stateCleared": "modified",
  },
  "src/main/resources/config/bootstrap-heroku.yml": {
    "contents": "# ===================================================================
# Spring Cloud Config bootstrap configuration for the "heroku" profile
# ===================================================================

",
    "stateCleared": "modified",
  },
  "system.properties": {
    "contents": "java.runtime.version=17 ",
    "stateCleared": "modified",
  },
}
`;
